[package]
name = "apps"
version = "0.1.0"
edition = "2021"
description = "Helps you to create application launchers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
clap = { version = "4.4.6", features = ["derive"] }
tabled = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = true
