[package]
name = "apps"
version = "0.2.1"
edition = "2021"
description = "Helps you to create application launchers in gnome based desktops"
authors = ["Julio Gardona <jcbritobr@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jgardona/apps"
license = "Apache-2.0"
keywords = ["manager", "cli", "desktop", "gnome", "launchers"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
clap = { version = "4.4.6", features = ["derive"] }
tabled = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = true
